# Todo-List

./: .gitignore  AUTH_IMPLEMENTATION_SUMMARY.md  Backend_Implementation_Summary.md  FINAL_SUMMARY.md  INTEGRATION_SUMMARY.md  README.md  VERIFICATION.md  debug_db.py  debug_db_ascii.py  demo.py  demo_advanced.py  demo_intermediate.py  main.py  migrate_db.py  pyproject.toml  requirements.txt  start_server.py  tasks.md  tasks_advanced.md  temp_fix.py  test_api.py  test_auth.py  test_backend.py  test_signup.py  test_todo.py  test_todo_app.py  vercel.json
.claude/: settings.local.json
.claude/agents/: auth-integration-agent.md  database-schema-agent.md  task-manager-agent.md  todo-chatbot-agent.md  ui-builder-agent.md  website-upgrader.md
.qwen/commands/: sp.reverse-engineer.toml
.spec-kit/: config.yaml
.specify/memory/: constitution.md
frontend/: .env.example  README.md  package-lock.json  package.json  tailwind.config.js  tasks.md
frontend/.next/: app-build-manifest.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: Footer.tsx  Navbar.tsx  TaskForm.tsx  TaskItem.tsx
frontend/lib/: api.ts  authApi.ts
frontend/types/: task.ts
frontend/utils/: date.ts  theme.tsx
huggingface_deployment/: requirements.txt
specs/: overview.md
specs/001-todo-cli-app/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-todo-cli-app/: spec.md
specs/api/: mcp-tools.md  rest-endpoints.md
specs/checklists/: backend-api.md  frontend-ux.md  (+1 more)
src/: backend_api.py  cli.py  main.py  task.py  todo_app.py  todolist.py
(+152 files in other folders)
